--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_ENV=production next build",
+    "build": "cross-env NODE_ENV=production next build",
     "build:dev": "NODE_ENV=production BRANCH=dev next build",
     "start": "next start",
     "export": "next export",
@@ -22,6 +22,7 @@
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "cross-env": "^7.0.3",
     "framer-motion": "^12.9.4",
     "gsap": "^3.11.5",
     "kinet": "^2.2.1",
